--- a/app/src/main/res/layout/item_app_list.xml
+++ b/app/src/main/res/layout/item_app_list.xml
@@ -11,10 +11,21 @@
         android:src="@mipmap/ic_launcher"
         android:scaleType="centerInside"/>
 
-    <TextView
-        android:id="@+id/app_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="16sp"/>
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/install_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"/>
+    </LinearLayout>
 </LinearLayout>
